# VjMapper

./: .gitignore  .mapmap_autosave  AGENTS.md  Agents.md  CHANGELOG.md  CI-01_Build+Test.yml  CI_CD_README.md  CLEANUP_SUMMARY.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  JULES_AUTOMATION_FIX.md  README.MD  README.md  READMEnew.MD  ROADMAP.md  build_check.txt  build_err.txt  build_errors.txt  check_err.txt  check_output.txt  check_output_layer.txt  check_output_utf8.txt  clippy_output.txt  debug_output.txt  err.txt  error_log.txt  knowledge.md  run_list.txt
.agent/workflows/: audio_backend_integration.md
.github/: FEEDBACK_ADDRESSED.md  HOW_TO_CREATE_ISSUES.md  IMPLEMENTATION_NOTES_SEQUENTIAL.md  IMPLEMENTATION_SUMMARY.md  ISSUES_TO_CREATE.md  JULES_API_SETUP.md  JULES_INTEGRATION.md  JULES_ISSUES_EXPLANATION.md  JULES_ISSUES_READY.md  README.md  README_CICD.md  SEQUENTIAL_PROCESSING.md  SETUP_GUIDE.md  WORKFLOW_CONTROL.md  automation-config.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  development_task.yml  feature_request.md  feature_request.yml  performance_issue.md  support_request.md
.github/Workflows/: CI-09_Create-Releases.yml
.github/workflows/: Build_Rust.yml  CI-01_build&test.yml  CI-01_build-and-test.yml  CI-02_security-scan.yml  CI-03_create-issues.yml  CI-04_session-trigger.yml  CI-05_pr-automation.yml  CI-06_update-changelog.yml  CI-07_post-merge-automation.yml  CI-08_monitor-jules-session.yml  CI-09B_create-release.yml  CI-09_create-release.yml  CI-09_create-releases.yml  CI-ADMIN-01_sync-labels.yml  README.md  Test.Md  codeql.yml  create-jules-issues.yml  jules-pr-automation.yml  jules-session-trigger.yml  sync-labels.yml  update-documentation.yml
.jules/: bolt.md
crates/mapmap/: Cargo.toml  build.rs  src.rs
crates/mapmap-control/: Cargo.toml
crates/mapmap-control/src/: error.rs  lib.rs  manager.rs  source.rs  target.rs
crates/mapmap-control/src/cue/: cue.rs  cue_list.rs
crates/mapmap-control/src/midi/: assignment_table.rs  clock.rs  ecler_nuo4.rs  input.rs  learn.rs  mapping.rs  midi_learn.rs  mod.rs  output.rs  profiles.rs
crates/mapmap-control/src/osc/: address.rs  client.rs  learn.rs  mapping.rs  mod.rs  server.rs
crates/mapmap-control/src/shortcuts/: shortcuts.rs
crates/mapmap-control/src/web/: handlers.rs  server.rs
crates/mapmap-core/: Cargo.toml
crates/mapmap-core/src/: animation.rs  assignment.rs  audio.rs  audio_media_pipeline.rs  audio_reactive.rs  codegen.rs  effects.rs  layer.rs  lib.rs  logging.rs  mapping.rs  mesh.rs  module.rs  monitor.rs  oscillator.rs  shader_graph.rs  state.rs
crates/mapmap-core/src/audio/: backend.rs  mod.rs
crates/mapmap-core/tests/: module_tests.rs
crates/mapmap-io/: Cargo.toml
crates/mapmap-io/src/: converter.rs  lib.rs  project.rs  project_format.rs  sink.rs  source.rs
crates/mapmap-io/src/stream/: encoder.rs  srt.rs
crates/mapmap-io/src/virtual_camera/: mod.rs
crates/mapmap-io/tests/: project_tests.rs
crates/mapmap-render/: Cargo.toml
crates/mapmap-render/benches/: texture_upload.rs
crates/mapmap-render/shaders/: effect_blur.wgsl  effect_chromatic_aberration.wgsl  effect_color_adjust.wgsl  effect_edge_detect.wgsl  effect_film_grain.wgsl  effect_invert.wgsl  effect_passthrough.wgsl  effect_pixelate.wgsl  effect_vignette.wgsl
crates/mapmap-render/src/: backend.rs  color_calibration_renderer.rs  compositor.rs  edge_blend_renderer.rs  effect_chain_renderer.rs  hot_reload.rs  lib.rs  mesh_renderer.rs  oscillator_renderer.rs  paint_texture_cache.rs  preset.rs  quad.rs  texture.rs
crates/mapmap-render/tests/: effect_chain_integration_tests.rs  effect_chain_tests.rs  multi_output_tests.rs
crates/mapmap-ui/: Cargo.toml
crates/mapmap-ui/locales/de/: main.ftl
crates/mapmap-ui/locales/en/: main.ftl
crates/mapmap-ui/src/: asset_manager.rs  assignment_panel.rs  assignment_table_panel.rs  audio_meter.rs  audio_panel.rs  config.rs  controller_overlay_panel.rs  cue_panel.rs  dashboard.rs  edge_blend_panel.rs  effect_chain_panel.rs  i18n.rs  icon_demo_panel.rs  icons.rs  inspector_panel.rs  layer_panel.rs  lib.rs  mapping_panel.rs  media_browser.rs  menu_bar.rs  mesh_editor.rs  module_canvas.rs  module_sidebar.rs  node_editor.rs  osc_panel.rs  oscillator_panel.rs  output_panel.rs  paint_panel.rs  shader_graph_editor.rs  shortcut_panel.rs  stereo_audio_meter.rs  theme.rs  timeline.rs  timeline_v2.rs  transform_panel.rs  undo_redo.rs  widgets.rs
crates/mapmap-ui/srcsrc/: dashboard.rs
crates/mapmap/examples/: hello_world_projection.rs  simple_render.rs
crates/mapmap/src/: main.rs  window_manager.rs  window_manager_test.rs
crates/mapmap/srcs/: main.rs
crates/mapmap/wix/: main.wxs
crates/streamline-icons-mcp/: Cargo.toml
crates/streamline-icons-mcp/src/: api.rs  lib.rs  main.rs  protocol.rs  server.rs
docs/: 05_ROADMAP.MD  INDEX.md  MCP-API.md  PROJECT_STATUS_SUMMARY.md  ci-cd-readme.md  cleanup-summary.md  implementation-summary.md  jules-automation-fix.md  roadmap.md
docs/01-GETTING-STARTED/: BUILD.md  INSTALLATION.md
docs/02-CONTRIBUTING/: Agents.md  CONTRIBUTING.md  DEVELOPMENT-SETUP.md
docs/03-ARCHITECTURE/: ARCHITECTURE.md  MULTI-PC-FEASIBILITY.md
docs/04-USER-GUIDE/: AUDIO-SETUP.md  KEYBOARD-SHORTCUTS.md  OSCILLATOR-CONTROL.md  UI-PANELS.md
docs/05-ROADMAP/: PHASE-01-CORE-ENGINE.md  PROJECT-PHASES.md  Planung_Multi-language.md
docs/06-TUTORIALS/: 01-HELLO-WORLD.md
docs/08-CHANGELOG/: CHANGELOG.md
docs/10-OSC-CONTROL/: COMMAND-REFERENCE.md
docs/SPECS/: AUTO_CALIBRATION.md  HUE_ENTERTAINMENT.md  NDI_INTEGRATION.md
docs/legacy/: OSCILLATOR_EFFECT_README.md  OSCILLATOR_PANEL_SUMMARY.md  oscillator_layer.md
docs/phases/: 00_PHASE0_STATUS.md  00_RUST_REWRITE_PLAN.md  00_foundation_status.md  01_PHASE1_STATUS.md  01_PHASE1_UI_INTEGRATION.md  01_core_playback_plan.md  02_PHASE2_STATUS.md  (+2 more)
icons_preview/: index.html
resources/: windows_resource.rc
scripts/: Download-Icon.ps1  encode4mmp  install-ffmpeg-dev.sh  replace-path-in-project.sh  scripts_jules-pre_pr_checks.sh  sh_make_tarball.sh
(+21 files in other folders)
