[workspace]
resolver = "2"
members = [
    "crates/mapmap-core",
    "crates/mapmap-render",
    "crates/mapmap-media",
    "crates/mapmap-ui",
    "crates/mapmap-control",
    "crates/mapmap-ffi",
    "crates/mapmap-io",
    "crates/mapmap",
    "crates/mapmap-mcp",
    "crates/streamline-icons-mcp",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
authors = ["MapMap Contributors", "MapFlow Contributors"]
license = "GPL-3.0"
repository = "https://github.com/MrLongNight/MapFlow"

[workspace.dependencies]
# Core dependencies
wgpu = "0.19"
winit = { version = "0.29", features = ["x11", "wayland"] }
pollster = "0.3"

# Graphics utilities
bytemuck = { version = "1.14", features = ["derive"] }
glam = { version = "0.25", features = ["serde"] }
image = "0.24"

# Async runtime
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"

# Concurrency
crossbeam-channel = "0.5"
rayon = "1.8"
parking_lot = "0.12"
arc-swap = "1.6"

# Media
ffmpeg-next = "6.1"

# Audio
cpal = { version = "0.15", default-features = false }
rustfft = "6.2"
hound = "3.5"

# UI
imgui = "0.12"
imgui-wgpu = { path = "crates/vendor/imgui-wgpu" }
imgui-winit-support = "0.12"
# Phase 6: egui migration
egui = "0.27"
egui-wgpu = "0.27"
egui-winit = "0.27"
egui_dock = "0.12"
egui_extras = { version = "0.27", features = ["image", "file"] }
fluent = "0.16"
fluent-langneg = "0.13"
unic-langid = "0.9"
rust-embed = "8.0"
once_cell = "1.18"

# Control
midir = "0.9"
rosc = "0.10"

# HTTP API
axum = "0.7"
tower = "0.4"
hyper = "1.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
ron = "0.8"
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Testing
proptest = "1.4"
criterion = "0.5"

# File watching
notify = "6.1"

# Build dependencies
bindgen = "0.69"
cbindgen = "0.26"
cc = "1.0"
winres = "0.1"

[profile.dev]
opt-level = 1  # Slightly optimize for better wgpu performance in debug

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
strip = true

[profile.bench]
inherits = "release"

# Note: ashpd v0.8.1 (transitive dependency via rfd) triggers a future
# incompatibility warning for Rust 2024 never type fallback. This will be
# resolved when rfd is updated to v0.15+ (requires libwayland-dev system package).
# The warning does not affect functionality in current Rust versions.
