[package]
name = "mapmap-control"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core dependencies
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# MIDI (optional)
midir = { workspace = true, optional = true }

# OSC (optional)
rosc = { workspace = true, optional = true }

# DMX dependencies
uuid = { version = "1.10", features = ["v4"] }

# HTTP API (optional)
axum = { workspace = true, optional = true, features = ["ws"] }
tokio = { workspace = true, optional = true, features = ["full"] }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }
futures = { version = "0.3", optional = true }
http = { version = "1.1", optional = true }

[features]
default = ["midi", "osc"]
midi = ["midir"]
osc = ["rosc"]
http-api = ["axum", "tokio", "tower", "tower-http", "futures", "http"]
full = ["midi", "osc", "http-api"]
