[package]
name = "mapmap-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
glam = { workspace = true }
cpal = { workspace = true, optional = true }
rustfft = { workspace = true }
hound = { workspace = true }
crossbeam-channel = { workspace = true }

[features]
default = []
audio = ["cpal"]
winit = []

[dev-dependencies]
proptest = { workspace = true }
