[package]
name = "mapmap-render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mapmap-core = { path = "../mapmap-core" }
wgpu = { workspace = true }
winit = { workspace = true }
pollster = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
image = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
notify = { workspace = true }
crossbeam-channel = { workspace = true }
rand = "0.8"

[dev-dependencies]
futures-channel = "0.3.30"
criterion = { workspace = true }
pollster = { workspace = true }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }

