[package]
name = "mapmap-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mapmap-core = { path = "../mapmap-core" }
mapmap-media = { path = "../mapmap-media" }
mapmap-render = { path = "../mapmap-render" }
mapmap-control = { path = "../mapmap-control", features = ["osc"] }
cpal = { workspace = true, optional = true }

# Legacy ImGui (Phase 0-5)
imgui = { workspace = true }
imgui-wgpu = { workspace = true }
imgui-winit-support = { workspace = true }

# Phase 6: egui migration
egui = { workspace = true }
egui-wgpu = { workspace = true }
egui-winit = { workspace = true }
egui_dock = { workspace = true }
egui_extras = { workspace = true }

wgpu = { workspace = true }
winit = { workspace = true }
glam = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
image = { workspace = true }
parking_lot = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
fluent = { workspace = true }
fluent-langneg = { workspace = true }
unic-langid = { workspace = true }
rust-embed = { workspace = true }
once_cell = { workspace = true }
dirs = "5.0"

[features]
default = ["cpal"]
