[package]
name = "mapmap"
version = "0.2.0"
edition = "2021"
authors = ["MapFlow Contributors"]
license = "GPL-3.0"
repository = "https://github.com/MrLongNight/MapFlow"
description = "MapFlow - Professional Projection Mapping Software"

[dependencies]
mapmap-core = { path = "../mapmap-core" }
mapmap-render = { path = "../mapmap-render" }
mapmap-media = { path = "../mapmap-media" }
mapmap-ui = { path = "../mapmap-ui" }
mapmap-control = { path = "../mapmap-control" }
mapmap-io = { path = "../mapmap-io" }
mapmap-mcp = { path = "../mapmap-mcp" }

rfd = "0.14"

wgpu = { workspace = true }
winit = { workspace = true }
pollster = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
image = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
crossbeam-channel = { workspace = true }
rayon = { workspace = true }
parking_lot = { workspace = true }
arc-swap = { workspace = true }
ffmpeg-next = { workspace = true, optional = true }
cpal = { workspace = true }
rustfft = { workspace = true }
hound = { workspace = true }

egui = { workspace = true }
egui-wgpu = { workspace = true }
egui-winit = { workspace = true }
egui_dock = { workspace = true }
egui_extras = { workspace = true }
midir = { workspace = true }
rosc = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
hyper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
ron = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
bindgen = { workspace = true }
cbindgen = { workspace = true }
cc = { workspace = true }

[features]
default = ["audio"]
ffmpeg = ["ffmpeg-next", "mapmap-media/ffmpeg"]
audio = ["mapmap-core/audio"]

[build-dependencies]
winres = { workspace = true }

[[bin]]
name = "MapFlow"
path = "src/main.rs"

[package.metadata.deb]
name = "mapflow"
maintainer = "MapFlow Team"
copyright = "2024 MapFlow Team"
extended-description = "Professional projection mapping software"
section = "graphics"
priority = "optional"
depends = "$auto, libasound2, libgl1"
assets = [
  ["target/release/MapFlow", "usr/bin/mapflow", "755"],
  ["resources/linux/mapflow.desktop", "usr/share/applications/", "644"],
  ["resources/app_icons/mapflow.png", "usr/share/icons/hicolor/128x128/apps/mapflow.png", "644"],
]
